--- a/navbar.css
+++ b/navbar.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 391px;
     background-image: url('https://s.imgur.com/desktop-assets/desktop-assets/homebg.e52b5cdf24f83bcd55f9f1318855f2ef.png');
 }
 .navbar{
