--- a/index.css
+++ b/index.css
@@ -79,9 +79,16 @@
     align-items: center;
 }
 #image_card{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(5,19%);
-    grid-column-gap: 1.25%;
-    grid-row-gap: 20px;
+    line-height: 0;
+   -webkit-column-count: 5;
+   -webkit-column-gap:   20px;
+   -moz-column-count:    5;
+   -moz-column-gap:      20px;
+   column-count:         5;
+   column-gap:           20px;
+}
+#image_card img,
+#image_card video{
+    width: 100% !important;
+  height: auto !important;
 }
