--- a/navbar.css
+++ b/navbar.css
@@ -13,7 +13,9 @@
     background-image: url('https://s.imgur.com/desktop-assets/desktop-assets/homebg.e52b5cdf24f83bcd55f9f1318855f2ef.png');
 }
 .navbar{
+    width: 100%;
     background-color: transparent;
+    position: fixed;
 }
 /* navbar */
 .mainDiv{
