--- a/index.css
+++ b/index.css
@@ -116,6 +116,7 @@
    column-count:         5;
    column-gap:           20px;
    row-gap: 40px;
+   margin-top: 40px;
 }
 #image_card img,
 #image_card video{
